@@ -16,6 +16,7 @@
 -- 既存のプラグインの親クラスを，Ethna_Plugin_Abstract を継承するように変更
 -- Plugin に設定を受け渡す方法を変更したため，etcのskelを変更
 --- それに伴い，Ethna_Plugin_Cachemanager_Memcacheの設定方法を変更
+- Ethna_Plugin_Cachemanager に config からデフォルト の namespace を指定可能とした
 
 *** bug fix
 
